MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
@import "../../map_modules/variables";

.breadcrumb-container {
    margin-top: -.5em;
    margin-bottom: 1em;

    .breadcrumb-link {
        &.current {
            font-weight: bold;
        }

        &:not(.current) {
            color: $blue;
            background-color: transparent;
            cursor: pointer;

            &:hover, &:active {
                color: darken( $blue, 15% );
                text-decoration: none;
            }
        }
    }
}

.folder-content-table {

    .col-actions {
        text-align: right;

        .menu-icon {
            cursor: pointer;
        }
    }

    .file-icon,
    .folder-icon {
        width: 2em;
    }

    .content-type-icon {
        height: 1.25em;
        width: 1.25em;
    }

    .col-file-size {
        width: 5em;
        text-align: right;
    }

    .col-date-modified {
        width: 7em;
        text-align: right;
    }

    .col-actions {
        width: 7em;
    }

    tr {
        border-bottom: 1px solid $grey;

        &.expanded {
            border-bottom: none;
        }

        td {
            padding: .5em 0;
        }

        .file-rename-input {
            width: 85%;
            float: left;
        }

        .file-rename-extension {
            position: relative;
            top: 1.5rem;
            left: 0.5rem;
            font-size: 1.25rem;
            color: grey;
        }

        .file-drop-content-description {
            padding: 0 1em .5em 2em;
            font-style: italic;
            white-space: pre-line;
        }

        &.add-row {
            color: $green;
            cursor: pointer;

            &:hover {
                color: darken( $green, 10% );
            }
        }
    }

    .folder,
    .file-download {
        color: $blue;
        background-color: transparent;
        cursor: pointer;

        &:hover, &:active {
            color: darken( $blue, 15% );
            text-decoration: none;
        }
    }

    .file-upload-row {
        margin-bottom: 1em;
        display: flex;
        flex-flow: row nowrap;

        .file-name {
            flex: 1 0 auto;
        }

        .spinner-small-r,
        .action-icon-container-inline {
            flex: 0 0 auto;
            height: 2.25em;
            width: 2.25em;
        }

        .spinner-small-r {
            border-color: rgba($charcoal, .2);
            border-left: .2em solid $charcoal;
            margin-right: .5em;
        }
    }

    .action-icon-container-inline {

        &[title="Submit Changes"] svg {
            color: $green;
        }

        &[title="Discard Changes"] svg,
        &[title="Cancel Upload"] svg {
            color: $red;
    }
}

    .progress-bars {
        margin-bottom: .5em;
    }
}

